--- a/stylesheets/login_admin.css
+++ b/stylesheets/login_admin.css
@@ -96,7 +96,7 @@ body {
     padding-top:4%;
     border-top-left-radius:15px;
     border-top-right-radius: 15px;
-    margin-bottom:4%;
+    margin-bottom:10%;
  }
 
  form {
@@ -116,6 +116,7 @@ body {
     border:none;
     border-bottom:2px solid black;
     margin-bottom:40px;
+    outline:none;
  }
  
  #nombre,#passwd {
@@ -126,9 +127,6 @@ body {
     background-color:#4285f4;
  }
  
- input:focus {
-    border:1px solid blue;
- }
  
  
  ::placeholder {
@@ -138,7 +136,7 @@ body {
  
  button {
     grid-row-start:3;
-    width:70%;
+    width:80%;
     background-color:#4285f4;
     border:1px solid #4285f4;
     border-radius: 15px;
@@ -146,7 +144,7 @@ body {
     margin-top:3%;
     margin-bottom:2%;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-    serif;
-    font-size:calc(16px + 0.45vw);
+    font-size:calc(16px + 0.2vw);
     color:white;
  }
  
