--- a/stylesheets/añadir_curso.css
+++ b/stylesheets/añadir_curso.css
@@ -4,7 +4,7 @@ body {
  }
  header {
     display:grid;
-    grid-template-columns:1fr 2fr 1fr;
+    grid-template-columns:80px 2fr max-content;
     grid-template-rows:1;
     background-color: #4285f4;
     padding:0.5%;
@@ -14,142 +14,127 @@ body {
  .inicio {
     grid-column-start:2;
     grid-row-start:1;
-    align-self:center;
-    justify-self: center;
-    font-size:calc(11px + 3vw);
+    align-self:start;
+    font-size:calc(9px + 3.5vw);
     font-family: Impact, Haettenschweiler,'Arial Narrow Bold', sans-serif;
     color:white;
     text-align:center;
-    margin:2% 0px 0px 0;
+    margin:2% 0px 0px 25%;
  }
  
  nav {
- grid-column-start:3;
- grid-row-start:0;
- align-self: end;
- justify-self:center;
+    grid-column-start:3;
+    grid-row-start:0;
+    align-self: end;
  }
  
  ul { 
     list-style-type: none;
     margin: 0;
     padding: 0;
-    text-align:center;
+    text-align:right;
  }
  
  li {
     margin-bottom:6%;
-    
  }
  
  
  
- .admin {
+ a {
     color: white;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     text-decoration: none;
-    font-size:calc(8px + 1vw);
- 
+    font-size:calc(9px + 1vw);
  }
  
  
- .admin:hover {
+ a:hover {
     text-decoration: underline;
     color:black;
  }
  
- 
  .foto {
-   align-self:center;
- }
+    align-self:center;
+  }
 
  img{
     grid-column-start: 1;
     grid-row-start: 1;
     place-self:center;
-    width:24%;
+    width:95%;
     min-width:60px;
     border-radius:40%;
  }
  
- #panelAdmin {
+ #modificar {
     background-color: white;
     display: grid;
     grid-template-columns:1fr;
-    grid-template-rows:1fr 2fr;
+    grid-template-rows:max-content 1fr;
     width: 100%;
-    max-width:30em;
+    max-width:23.75em;
     margin:0 auto;
     padding-top:0;
     border-radius:15px;
  }
-
+ 
  .bienvenida {
     grid-row-start:1;
-    align-self: center;
+   place-self: start center;
     text-align:center;
     font-family:'Franklin Gothic Medium','Arial Narrow', Arial, sans-serif;
     color:white;
     font-size: 20px;
     background-color:#4285f4;
     margin:0 auto;
+    margin-bottom:5%;
     width:100%;
-    max-width:30em;
+    max-width:60em;
     padding-bottom:4%;
     padding-top:4%;
     border-top-left-radius:15px;
     border-top-right-radius: 15px;
-    margin-bottom:4%;
  }
  
-#botones {
+ form {
     grid-row-start:2;
-    display:grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr;
-    align-self:center;
-    
-}
-
-.cursos {
-    grid-column:1;
-    grid-row:1;
-    place-self:center;
-    width:80%;
-    text-align:center;
-    color: white;
-    background-color: #4285f4;
-    border:1px solid #4285f4;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-    serif;
-    text-decoration: none;
-    font-size:calc(12px + 0.35vw);
-    border-radius: 15px;
-    padding:5%;
+    text-align: center;
  }
  
- .cursos:hover {
+ input {
+    text-align:center;
+    border:none;
+    border-bottom:2px solid black;
+    margin-bottom:40px;
+    outline:none;
+ }
+ 
+ input:hover {
+    background-color:#4285f4;
+ }
+ 
+ 
+ ::placeholder {
+    color:black;
+    font-size:16px;
+ }
+ 
+ button {
+    width:60%;
+    background-color:#4285f4;
+    border:1px solid #4285f4;
+    border-radius: 15px;
+    padding: 3%;
+    margin: 5% 0px 5% 0px;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-    serif;
+    font-size:calc(12px + 0.45vw);
+    color:white;
+ }
+ 
+ button:hover {
     background-color: white;
     color:#4285f4;
     text-decoration: underline;
  }
-
- .profesores {
-    grid-column:2;
-    grid-row:1;
-    place-self:center;
-    width:80%;
-    text-align:center;
-    color: black;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-    serif;
-    text-decoration: none;
-    font-size:calc(12px + 0.35vw);
-    border:1px solid black;
-    border-radius: 15px;
-    padding: 5%;
- }
  
- .profesores:hover {
-    color:white;
-    text-decoration: underline;
-    background-color:black;
- }
