--- a/stylesheets/cursos_matriculados.css
+++ b/stylesheets/cursos_matriculados.css
@@ -20,7 +20,19 @@ body {
     font-family: Impact, Haettenschweiler,'Arial Narrow Bold', sans-serif;
     color:white;
     text-align:center;
-    margin:0px 0px 0px 13%;
+    margin:0px 0px 0px 18%;
+ }
+
+ .matriculaInicio {
+    grid-column-start:2;
+    grid-row-start:1;
+    align-self:center;
+    justify-self: center;
+    font-size:calc(13px + 3vw);
+    font-family: Impact, Haettenschweiler,'Arial Narrow Bold', sans-serif;
+    color:white;
+    text-align:center;
+    margin:0px 0px 0px 10%;
  }
  
  nav {
@@ -70,7 +82,7 @@ body {
     background-color: white;
     display: grid;
     grid-template-columns:1fr;
-    grid-template-rows:max-content 140px 1fr;
+    grid-template-rows:max-content 1fr;
     width: 100%;
     max-width:80em;
     margin:0 auto;
@@ -79,6 +91,17 @@ body {
     margin-bottom:5%;
  }
 
+ #tablaMatricula {
+    background-color: white;
+    display: grid;
+    grid-template-columns:1fr;
+    grid-template-rows:max-content 1fr;
+    width: 100%;
+    max-width:80em;
+    margin:0 auto;
+    border-radius:15px;
+    margin-bottom:5%;
+ }
  .bienvenida {
     grid-row-start:1;
    place-self: start center;
@@ -140,7 +163,7 @@ tr:nth-child(2n + 1) {
 td {
     border:1px solid black;
     text-align: center;
-    padding:2px;
+    padding:10px;
 }
 
 th {
