--- a/stylesheets/modificarcurso.css
+++ b/stylesheets/modificarcurso.css
@@ -14,20 +14,18 @@ body {
  .inicio {
     grid-column-start:2;
     grid-row-start:1;
-    align-self:center;
-    justify-self: center;
-    font-size:calc(11px + 3vw);
+    align-self:start;
+    font-size:calc(9px + 3.5vw);
     font-family: Impact, Haettenschweiler,'Arial Narrow Bold', sans-serif;
     color:white;
     text-align:center;
-    margin:2% 0px 0px 12%;
+    margin:2% 0px 0px 19%;
  }
  
  nav {
- grid-column-start:3;
- grid-row-start:0;
- align-self: end;
- justify-self:center;
+    grid-column-start:3;
+    grid-row-start:0;
+    align-self: end;
  }
  
  ul { 
@@ -39,8 +37,9 @@ body {
  
  li {
     margin-bottom:6%;
-    
  }
+ 
+ 
  
  a {
     color: white;
@@ -49,16 +48,17 @@ body {
     font-size:calc(9px + 1vw);
  }
  
+ 
  a:hover {
-   text-decoration: underline;
-   color:black;
+    text-decoration: underline;
+    color:black;
  }
-
+ 
  .foto {
-   align-self:center;
- }
+    align-self:center;
+  }
 
- .logo{
+ img{
     grid-column-start: 1;
     grid-row-start: 1;
     place-self:center;
@@ -67,105 +67,115 @@ body {
     border-radius:40%;
  }
  
- #tabla {
+ #modificar {
     background-color: white;
     display: grid;
     grid-template-columns:1fr;
-    grid-template-rows:max-content 140px 1fr;
+    grid-template-rows:max-content 1fr;
     width: 100%;
-    max-width:80em;
+    max-width:23.75em;
     margin:0 auto;
     padding-top:0;
     border-radius:15px;
-    margin-bottom:5%;
  }
-
+ 
  .bienvenida {
     grid-row-start:1;
    place-self: start center;
     text-align:center;
     font-family:'Franklin Gothic Medium','Arial Narrow', Arial, sans-serif;
     color:white;
-    font-size: 30px;
+    font-size: 20px;
     background-color:#4285f4;
     margin:0 auto;
+    margin-bottom:5%;
     width:100%;
-    max-width:80em;
-    padding-bottom:3%;
-    padding-top:3%;
+    max-width:60em;
+    padding-bottom:4%;
+    padding-top:4%;
     border-top-left-radius:15px;
     border-top-right-radius: 15px;
  }
+ 
+ form {
+    grid-row-start:2;
+    text-align: center;
+ }
 
-.añadir {
-   grid-column:1;
-    grid-row:2;
-    place-self:start center;
-    margin-top:3%;
-    width:30%;
+ input {
     text-align:center;
-    color: white;
-    background-color: #4285f4;
-    border:1px solid #4285f4;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-    serif;
-    text-decoration: none;
-    font-size:calc(12px + 0.35vw);
-    border-radius: 15px;
-    padding:2%;
+    border:none;
+    border-bottom:2px solid black;
+    margin-bottom:40px;
+    outline:none;
  }
  
- .añadir:hover {
+ input:hover {
+    background-color:#4285f4;
+ }
+ 
+ 
+ ::placeholder {
+    color:black;
+    font-size:16px;
+ }
+ 
+ button {
+    width:60%;
+    background-color:#4285f4;
+    border:1px solid #4285f4;
+    border-radius: 15px;
+    padding: 3%;
+    margin: 5% 0px 5% 0px;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-    serif;
+    font-size:calc(12px + 0.45vw);
+    color:white;
+ }
+ 
+ button:hover {
     background-color: white;
     color:#4285f4;
     text-decoration: underline;
-}
+ }
+ 
+ /*parte para borrar curso*/
 
-form {
-   grid-column:1;
-   grid-row:2;
-   align-self:end;
-   margin-left:17%;
-}
-
-table {
-   grid-row:3;
-   padding:1%;
-   place-self: center center;
-}
-
-
-tr:nth-child(2n + 1) {
-   background:gainsboro;
-}
-
-td {
-    border:1px solid black;
-    text-align: center;
-    padding:2px;
-}
-
-th {
-    border:1px solid black;
-    padding:20px;
-    color:white;
-    background: rgb(2,0,36);
-    background: linear-gradient(rgba(2,0,36,1) 0%, rgba(9,9,121,1) 1%, rgba(9,71,124,1) 7%, rgba(0,212,255,1) 100%); 
-}
-
-.desactivado {
-   background-color: lightcoral;
-}
-
-.activado {
+ p {
+   display:flex;
+   text-align:center;
+   font-size:large;
+   color:black;
+ }
+ .exito {
+   padding:10px;
+   width:11%;
+  border: 3px solid green;
+   margin-left:45%;
+   margin-bottom:45%;
+   border-radius: 15px;
    background-color: lightgreen;
-}
+ }
 
-.buscar {
-    background-color: #4285f4;
-    color:white;
-}
+ .fallo {
+   padding:2%;
+   margin:0 auto;
+   background-color: lightcoral;
+ }
 
-button:hover {
-    background-color:white;
-    color:#4285f4;
-}
+ .modificar {
+   width:70%;
+   margin-left:11%;
+   background-color: lightgreen;
+   padding:10px;
+   border-radius: 15px;
+   border: 3px solid green;
+ }
+
+ .fallomodificar {
+   width:70%;
+   margin-left:11%;
+   background-color: lightcoral;
+   padding:10px;
+   border-radius: 15px;
+   border: 3px solid red;
+ }
