--- a/stylesheets/modificarprofesor.css
+++ b/stylesheets/modificarprofesor.css
@@ -19,7 +19,7 @@ body {
     font-family: Impact, Haettenschweiler,'Arial Narrow Bold', sans-serif;
     color:white;
     text-align:center;
-    margin:2% 0px 0px 20%;
+    margin:2% 0px 0px 19%;
  }
  
  nav {
@@ -62,7 +62,8 @@ body {
     grid-column-start: 1;
     grid-row-start: 1;
     place-self:center;
-    width:100%;
+    width:95%;
+    min-width:60px;
     border-radius:40%;
  }
  
@@ -100,7 +101,7 @@ body {
     grid-row-start:2;
     text-align: center;
  }
- 
+
  input {
     text-align:center;
     border:none;
@@ -137,3 +138,46 @@ body {
     text-decoration: underline;
  }
  
+ /*parte para borrar profesor*/
+
+ p {
+   display:flex;
+   text-align:center;
+   font-size:large;
+   color:black;
+ }
+ .exito {
+   padding:10px;
+   width:11%;
+  border: 3px solid green;
+   margin-left:45%;
+   margin-bottom:45%;
+   border-radius: 15px;
+   background-color: lightgreen;
+ }
+
+ .fallo {
+   padding:2%;
+   margin:0 auto;
+   background-color: lightcoral;
+ }
+
+ /*parte para modificar profesor*/
+
+ .modificar {
+   width:70%;
+   margin-left:11%;
+   background-color: lightgreen;
+   padding:10px;
+   border-radius: 15px;
+   border: 3px solid green;
+ }
+
+ .fallomodificar {
+   width:70%;
+   margin-left:11%;
+   background-color: lightcoral;
+   padding:10px;
+   border-radius: 15px;
+   border: 3px solid red;
+ }
