--- a/stylesheets/añadir_profesor.css
+++ b/stylesheets/añadir_profesor.css
@@ -154,4 +154,13 @@ body {
     border-radius: 15px;
     border: 3px solid red;
   }
+
+  .errorsql {
+   text-align:center;
+   place-self:center center;
+   padding:2%;
+   border-radius:15px;
+   font-size:25px;
+   background-color: lightcoral;
+}
  
