--- a/stylesheets/cursos.css
+++ b/stylesheets/cursos.css
@@ -168,3 +168,12 @@ button:hover {
     background-color:white;
     color:#4285f4;
 }
+
+.errorsql {
+   text-align:center;
+   place-self:center center;
+   padding:2%;
+   border-radius:15px;
+   font-size:25px;
+   background-color: lightcoral;
+}
