--- a/stylesheets/login.css
+++ b/stylesheets/login.css
@@ -179,3 +179,19 @@ button:hover {
    padding:15px;
    border-radius: 15px;
 }
+
+.noresult {
+   text-align:center;
+   place-self:center center;
+   font-size:25px;
+}
+
+.salir {
+   display:inline;
+   margin-left:45%;
+   margin-top: 40%;
+   background-color:lightgreen;
+   padding:2%;
+   border-radius:15px;
+   border:1px solid black;
+}
