--- a/stylesheets/login_admin.css
+++ b/stylesheets/login_admin.css
@@ -162,3 +162,13 @@ body {
    padding:15px;
    border-radius: 15px;
 }
+
+.errorsql {
+   text-align:center;
+   display:inline;
+   margin:0 0 0 40%;
+   padding:2%;
+   border-radius:15px;
+   font-size:25px;
+   background-color: lightcoral;
+}
