--- a/stylesheets/modificarcurso.css
+++ b/stylesheets/modificarcurso.css
@@ -169,6 +169,7 @@ body {
    padding:10px;
    border-radius: 15px;
    border: 3px solid green;
+   text-align: center;
  }
 
  .fallomodificar {
@@ -178,4 +179,26 @@ body {
    padding:10px;
    border-radius: 15px;
    border: 3px solid red;
+   text-align: center;
  }
+
+ .errorsql1 {
+   display:inline;
+   width:70%;
+   margin-left:44%;
+   margin-top:15%;
+   background-color: lightcoral;
+   padding:10px;
+   border-radius: 15px;
+   border: 3px solid red;
+   text-align: center;
+ }
+
+ .errorsql {
+   text-align:center;
+   place-self:center center;
+   padding:2%;
+   border-radius:15px;
+   font-size:25px;
+   background-color: lightcoral;
+}
