--- a/stylesheets/profesores.css
+++ b/stylesheets/profesores.css
@@ -169,3 +169,12 @@ button:hover {
     background-color:white;
     color:#4285f4;
 }
+
+.errorsql {
+   text-align:center;
+   place-self:center center;
+   padding:2%;
+   border-radius:15px;
+   font-size:25px;
+   background-color: lightcoral;
+}
