--- a/stylesheets/cursos_matriculados.css
+++ b/stylesheets/cursos_matriculados.css
@@ -1,195 +1,168 @@
 body {
-    margin: 0;
-    background-color: gainsboro;
- }
- header {
-    display:grid;
-    grid-template-columns:120px 2fr max-content;
-    grid-template-rows:1;
-    background-color: #4285f4;
-    padding:0.5%;
-    margin-bottom:5%;
- }
- 
- .inicio {
-    grid-column-start:2;
-    grid-row-start:1;
-    align-self:center;
-    justify-self: center;
-    font-size:calc(13px + 3vw);
-    font-family: Impact, Haettenschweiler,'Arial Narrow Bold', sans-serif;
-    color:white;
-    text-align:center;
-    margin:0px 0px 0px 18%;
- }
+   margin: 0;
+   background-color: gainsboro;
+}
+header {
+   display:grid;
+   grid-template-columns:120px 2fr max-content;
+   grid-template-rows:1;
+   background-color: #4285f4;
+   padding:0.5%;
+   margin-bottom:5%;
+}
 
- .matriculaInicio {
-    grid-column-start:2;
-    grid-row-start:1;
-    align-self:center;
-    justify-self: center;
-    font-size:calc(13px + 3vw);
-    font-family: Impact, Haettenschweiler,'Arial Narrow Bold', sans-serif;
-    color:white;
-    text-align:center;
-    margin:0px 0px 0px 10%;
- }
- 
- nav {
- grid-column-start:3;
- grid-row-start:0;
- align-self: end;
- justify-self:center;
- }
- 
- ul { 
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    text-align:right;
- }
- 
- li {
-    margin-bottom:6%;
-    
- }
- 
- a {
-    color: white;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    text-decoration: none;
-    font-size:calc(9px + 1vw);
- }
- 
- a:hover {
-   text-decoration: underline;
-   color:black;
- }
-
- .foto {
+.inicio {
+   grid-column-start:2;
+   grid-row-start:1;
    align-self:center;
- }
+   justify-self: center;
+   font-size:calc(13px + 3vw);
+   font-family: Impact, Haettenschweiler,'Arial Narrow Bold', sans-serif;
+   color:white;
+   text-align:center;
+   margin:0px 0px 0px 0px;
+}
 
- .logo{
-    grid-column-start: 1;
-    grid-row-start: 1;
-    place-self:center;
-    width:100%;
-    border-radius:40%;
- }
- 
- #tabla {
-    background-color: white;
-    display: grid;
-    grid-template-columns:1fr;
-    grid-template-rows:max-content 1fr;
-    width: 100%;
-    max-width:80em;
-    margin:0 auto;
-    padding-top:0;
-    border-radius:15px;
-    margin-bottom:5%;
- }
+nav {
+grid-column-start:3;
+grid-row-start:0;
+align-self: end;
+justify-self:center;
+}
 
- #tablaMatricula {
-    background-color: white;
-    display: grid;
-    grid-template-columns:1fr;
-    grid-template-rows:max-content 1fr;
-    width: 100%;
-    max-width:80em;
-    margin:0 auto;
-    border-radius:15px;
-    margin-bottom:5%;
- }
- .bienvenida {
-    grid-row-start:1;
+ul { 
+   list-style-type: none;
+   margin: 0;
+   padding: 0;
+   text-align:right;
+}
+
+li {
+   margin-bottom:6%;
+   
+}
+
+a {
+   color: white;
+   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+   text-decoration: none;
+   font-size:calc(9px + 1vw);
+}
+
+a:hover {
+  text-decoration: underline;
+  color:black;
+}
+
+.foto {
+  align-self:center;
+}
+
+.logo{
+   grid-column-start: 1;
+   grid-row-start: 1;
+   place-self:center;
+   width:100%;
+   border-radius:40%;
+}
+
+#tabla {
+   background-color: white;
+   display: grid;
+   grid-template-columns:1fr;
+   grid-template-rows:max-content 1fr;
+   width: 100%;
+   max-width:80em;
+   margin:0 auto;
+   padding-top:0;
+   border-radius:15px;
+   margin-bottom:5%;
+}
+
+.bienvenida {
+   grid-row-start:1;
    place-self: start center;
-    text-align:center;
-    font-family:'Franklin Gothic Medium','Arial Narrow', Arial, sans-serif;
-    color:white;
-    font-size: 40px;
-    background-color:#4285f4;
-    margin:0 auto;
-    width:100%;
-    max-width:80em;
-    padding-bottom:3%;
-    padding-top:2%;
-    border-top-left-radius:15px;
-    border-top-right-radius: 15px;
- }
+   text-align:center;
+   font-family:'Franklin Gothic Medium','Arial Narrow', Arial, sans-serif;
+   color:white;
+   font-size: 40px;
+   background-color:#4285f4;
+   margin:0 auto;
+   width:100%;
+   max-width:80em;
+   padding-bottom:3%;
+   padding-top:2%;
+   border-top-left-radius:15px;
+   border-top-right-radius: 15px;
+}
 
 .añadir {
-   grid-column:1;
-    grid-row:2;
-    place-self:start center;
-    margin-top:3%;
-    width:30%;
-    text-align:center;
-    color: white;
-    background-color: #4285f4;
-    border:1px solid #4285f4;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-    serif;
-    text-decoration: none;
-    font-size:calc(12px + 0.35vw);
-    border-radius: 15px;
-    padding:2%;
- }
- 
- .añadir:hover {
-    background-color: white;
-    color:#4285f4;
-    text-decoration: underline;
+  grid-column:1;
+   grid-row:2;
+   place-self:start center;
+   margin-top:3%;
+   width:30%;
+   text-align:center;
+   color: white;
+   background-color: #4285f4;
+   border:1px solid #4285f4;
+   font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-    serif;
+   text-decoration: none;
+   font-size:calc(12px + 0.35vw);
+   border-radius: 15px;
+   padding:2%;
 }
 
-form {
-   grid-column:1;
-   grid-row:2;
-   align-self:end;
-   margin-left:11%;
+.añadir:hover {
+   background-color: white;
+   color:#4285f4;
+   text-decoration: underline;
 }
+
+.cursos {
+   display:flex;
+   flex-wrap:wrap;
+   width:100%;
+   flex-direction: row;
+ }
 
 table {
-   grid-row:3;
-   padding:1%;
-   place-self: center center;
+  width:50%;
+  grid-row:2;
+  margin:1% 5% 1% 5%;
+  background-color: lightskyblue;
+  border-radius:20px;
+  font-weight:bold;
+  font-size:18px;
+  flex:0 40%;
 }
 
-
-tr:nth-child(2n + 1) {
-   background:gainsboro;
+tr {
+  text-align:center;
 }
 
 td {
-    border:1px solid black;
-    text-align: center;
-    padding:10px;
+  padding-top:4%;
 }
 
-th {
-    border:1px solid black;
-    padding:20px;
-    color:white;
-    background: rgb(2,0,36);
-    background: linear-gradient(rgba(2,0,36,1) 0%, rgba(9,9,121,1) 1%, rgba(9,71,124,1) 7%, rgba(0,212,255,1) 100%); 
+
+.enlace {
+  color: black;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  text-decoration: none;
+  font-size:calc(9px + 1vw);
 }
 
-.desactivado {
-   background-color: lightcoral;
+.enlace:hover {
+ text-decoration: underline;
+ color:gray;
 }
 
-.activado {
-   background-color: lightgreen;
-}
-
-.buscar {
-    background-color: #4285f4;
-    color:white;
-}
-
-button:hover {
-    background-color:white;
-    color:#4285f4;
+.nombre {
+  font-size:30px;
+  width:80%;
+  border-bottom: 2px solid black;
+  
 }
 
 .errorsql {
@@ -199,4 +172,8 @@ button:hover {
    border-radius:15px;
    font-size:25px;
    background-color: lightcoral;
+}
+
+.info {
+   font-size:25px;
 }
